@@ -1,5 +1,7 @@
-2011-03-30  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-04-22  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* setup.py inferior_tty.py gdb.py: allow the gdb 'shell' command and
+	include inferior_tty.py in the distribution.
 	* gdb.py: Handling of the netbeans socket disconnection, closes the
 	gdb session also when gdb is busy.
 	* buffer.py netbeans.py: Disable automatic display of the console
